--- a/.github/workflows/update_usage.yml
+++ b/.github/workflows/update_usage.yml
@@ -14,7 +14,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Setup Python
         uses: actions/setup-python@v4
-        with: python-version: '3.x'
+        with: 
+          python-version: '3.x'
       - name: Install dependencies
         run: pip install requests
       - name: Fetch usage data
