--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: Prepare auth token
       env:
-        USER: ${{ secrets.GH_PAGES_USER }}
-        PASS: ${{ secrets.GH_PAGES_PASSWORD }}
+        USER: ${{ secrets.GITHUB_PAGES_USER }}
+        PASS: ${{ secrets.GITHUB_PAGES_PASSWORD }}
       run: |
         echo "AUTH_TOKEN=$(echo -n \"$USER:$PASS\" | base64)" >> $GITHUB_ENV
     - name: Inject auth token into HTML
