--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,22 +4,28 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  pages: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Prepare auth token
-      env:
-        USER: ${{ secrets.GHP_USER }}
-        PASS: ${{ secrets.GHP_PASSWORD }}
-      run: |
-        echo "AUTH_TOKEN=$(echo -n \"$USER:$PASS\" | base64)" >> $GITHUB_ENV
-    - name: Inject auth token into HTML
-      run: |
-        sed -i 's|__AUTH_TOKEN__|'"$AUTH_TOKEN"'|' index.html
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./public
+      - uses: actions/checkout@v4
+      - name: Prepare auth token
+        env:
+          USER: ${{ secrets.GHP_USER }}
+          PASS: ${{ secrets.GHP_PASSWORD }}
+        run: |
+          echo "AUTH_TOKEN=$(echo -n \"$USER:$PASS\" | base64)" >> $GITHUB_ENV
+      - name: Inject auth token into HTML
+        run: |
+          sed -i 's|__AUTH_TOKEN__|'"$AUTH_TOKEN"'|' index.html
+      - name: Build static site
+        run: npm ci && npm run build
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./
