--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,18 +12,20 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Prepare auth token
-        env:
-          USER: ${{ secrets.GHP_USER }}
-          PASS: ${{ secrets.GHP_PASSWORD }}
-        run: |
-          echo "AUTH_TOKEN=$(echo -n \"$USER:$PASS\" | base64)" >> $GITHUB_ENV
-      - name: Inject auth token into HTML
-        run: |
-          sed -i 's|__AUTH_TOKEN__|'"$AUTH_TOKEN"'|' index.html
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Prepare auth token
+      env:
+        USER: ${{ secrets.GHP_USER }}
+        PASS: ${{ secrets.GHP_PASSWORD }}
+      run: |
+        TOKEN=$(printf '%s:%s' "$USER" "$PASS" | base64)
+        echo "AUTH_TOKEN=$TOKEN" >> $GITHUB_ENV
+    - name: Inject auth token into HTML
+      run: |
+        sed -i 's|__AUTH_TOKEN__|'"$AUTH_TOKEN"'|' index.html
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./
