--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,9 +27,14 @@ jobs:
           echo "AUTH_TOKEN=$TOKEN" >> $GITHUB_ENV
       - name: Inject auth token into HTML
         run: |
+          apt-get update && apt-get install -y dos2unix
+          dos2unix index.html
           sed -i "s|__AUTH_TOKEN__|\"${AUTH_TOKEN}\"|g" index.html
-      - name: Dump index.html head for verification
-        run: head -n 3 index.html
+      - name: Verify token injection
+        run: |
+          echo "---- index.html head ----"
+          head -n 3 index.html
+          echo "-------------------------"
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
